# Twitter-atv

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml
staticfiles/: script.js
twitter/: asgi.py  forms.py  models.py  settings.py  urls.py  views.py  views2.py  wsgi.py
twitter/migrations/: 0001_initial.py  0002_comentario.py  0002_perfil.py  0003_perfil_seguidores.py  0004_alter_perfil_imagem.py
twitter/static/: script.js  script2.js  script22.js  styles.css  styles2.css  styles22.css  styless.css
twitter/templates/: autentication.html  feed.html
