[tool.poetry]
name = "twitter-atv"
version = "0.1.0"
description = "Twitter API"
authors = ["Hibernon <hibernon73@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pytest = ">=8.4.0,<9.0.0"
django = ">=5.2.3,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
flake8 = ">=7.3.0,<8.0.0"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
