[tool.poetry]
name = "twitter_atv"
version = "0.1.0"
description = "Twitter API"
authors = ["Hibernon <hibernon73@gmail.com>"]
readme = "README.md"
packages = [{ include = "twitter_atv" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pytest = ">=8.4.0,<9.0.0"
django = ">=5.2.3,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
flake8 = ">=7.3.0,<8.0.0"
psycopg2-binary = "^2.9.10"
gitpython = "^3.1.44"
pillow = "^11.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
